# vantage-core

./: .gitignore  README.md  pyproject.toml
docs/: DEVELOPER_GUIDE.md
examples/: open_source_agent_eval.py
vantage_core/: __init__.py  metrics.py  runner.py
