[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vantage-core"
version = "0.1.0"
description = "Open-source local multi-turn simulation and behavioral regression engine for AI agents."
readme = "README.md"
authors = [
    { name = "Vantage AI Engineering", email = "dev@vantage.ai" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.15.0",
    "pydantic>=2.0.0",
    "tabulate>=0.9.0"
]

[project.urls]
Homepage = "https://vantage.ai"
Repository = "https://github.com/vantage-ai-eng/vantage-core"
